nodejs/deploy/k8s/deploy-node-sevima-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sevima-technical-test-node
  namespace: sevima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sevima-technical-test-node
  template:
    metadata:
      labels:
        app: sevima-technical-test-node
        build-id: "BUILD_ID_PLACEHOLDER"
    spec:
      nodeSelector:
        kubernetes.io/hostname: rke2-agent-node-3
      containers:
        - name: sevima-technical-test-node
          image: docker.io/ardianhermawan17/node-sevima-technical-test:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: sevima-technical-test-node-service
  namespace: sevima
spec:
  selector:
    app: sevima-technical-test-node
  ports:
    - port: 3000
      targetPort: 3000
