nodejs/deploy/k8s/ingress-node-sevima-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sevima-technical-test-node
  namespace: sevima
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sevima-node-soal-1.radiodiagnosis.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sevima-technical-test-node-service
                port:
                  number: 3000
  tls:
    - hosts:
        - sevima-node-soal-1.radiodiagnosis.id
      secretName: node-sevima-technical-test-tls
